# guardian-autopilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
data/: investigations.json
docs/: architecture.md  deployment.md
fixtures/incidents/: aws_key.txt  github_pat.txt  leaked_credentials.txt  low_incident.txt  medium_incident.txt  mixed_incident.txt  slack_token.txt
nginx/: default.conf
src/agents/: decision_agent.py  investigation_agent.py  parser_agent.py  report_agent.py
src/api/: app.py  routes.py  schemas.py
src/cli/: main.py
src/cli/commands/: doctor.py  explain.py  scan.py  serve.py  version.py
src/cloud/: alibaba_dashscope.py
src/core/: orchestrator.py  qwen_client.py
src/models/: incident.py  report.py
src/prompts/: decision.py  investigator.py  parser.py
src/services/ai/: base.py  mock_provider.py  provider_factory.py  qwen_provider.py
src/services/memory/: __init__.py  models.py  repository.py  service.py
src/ui/: app.py  components.py  theme.py
src/utils/: json.py
tests/integration/: test_alibaba_connection.py  test_decision.py  test_investigation.py  test_orchestrator.py  test_parser.py  test_report.py
