[project]
name = "guardian-autopilot"
version = "0.1.0"
description = "AAutonomous AI-powered multi-agent incident response platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "typer",
    "rich",
]

[project.scripts]
guardian = "src.cli.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]