[project]
name = "guardian-autopilot"
version = "1.0.0"
description = "Autonomous AI-powered multi-agent incident response platform"
license = { text = "MIT" }
keywords = [
    "ai",
    "multi-agent",
    "security",
    "incident-response",
    "fastapi",
    "qwen",
    "alibaba-cloud",
    "streamlit",
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "streamlit>=1.58.0",
    "requests>=2.34.2",

    "openai>=2.4.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "httpx>=0.28.1",
    "orjson>=3.11.0",
]

[project.scripts]
guardian = "src.cli.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]